<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="select">Select</string>
    <string name="mobile">Mobile</string>
    <string name="work">Work</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="list_item">List item</string>
    <string name="category">Category</string>
    <string name="card_description">Supporting line text lorem ipsum dolor sit amet, consectetur.</string>
    <string name="close">Close</string>
    <string name="cart">Cart</string>
    <string name="cart_item_count">4 items in your cart</string>
    <string name="order_total">Order Total:</string>
    <string name="place_order">Place order</string>
    <string name="tax">Tax:</string>
    <string name="shipping">Shipping:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax_price">$10.50</string>
    <string name="shipping_price">$25</string>
    <string name="subtotal_price">$140</string>
    <string name="order_total_price">$175.50</string>
    <string name="cart_item_image">Cart item image</string>
</resources>