<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/cart_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            app:menu="@menu/menu_cart"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:title="@string/cart"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/items_count_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/standard"
        android:paddingVertical="@dimen/defaultMargin"
        android:text="@string/cart_item_count"
        android:textAppearance="@style/CartItemsCountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/standard"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/order_total_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items_count_tv" />

    <TextView
        android:id="@+id/order_total_tv"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard"
        android:text="@string/order_total"
        app:layout_constraintBottom_toTopOf="@+id/subtotal_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtotal_tv"
        style="@style/CartOrderBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@+id/shipping_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/shipping_tv"
        style="@style/CartOrderBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping"
        app:layout_constraintBottom_toTopOf="@+id/tax_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/order_total_price_tv"
        style="@style/CartItemPriceLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard"
        android:text="@string/order_total_price"
        app:layout_constraintBottom_toTopOf="@+id/subtotal_price_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subtotal_price_tv"
        style="@style/CartItemPriceMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal_price"
        app:layout_constraintBottom_toTopOf="@+id/shipping_price_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/shipping_price_tv"
        style="@style/CartItemPriceMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping_price"
        app:layout_constraintBottom_toTopOf="@+id/tax_price_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tax_price_tv"
        style="@style/CartItemPriceMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_price"
        app:layout_constraintBottom_toTopOf="@+id/place_order_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tax_tv"
        style="@style/CartOrderBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        app:layout_constraintBottom_toTopOf="@+id/place_order_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/place_order_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/defaultMargin"
        android:text="@string/place_order"
        app:icon="@drawable/ic_mood"
        app:iconGravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>