<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/standard"
    android:layout_marginVertical="@dimen/threeQuarter"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/cart_item_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cart_item"
        app:layout_constraintEnd_toStartOf="@+id/cart_item_ll"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/cart_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cart_item_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/standard"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cart_item_price_tv"
        app:layout_constraintStart_toEndOf="@id/cart_item_iv"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cart_item_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/half"
            android:text="@string/list_item"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintStart_toEndOf="@+id/cart_item_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cart_item_category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="@style/CartItemBodyText" />

        <TextView
            android:id="@+id/cart_item_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/card_description"
            android:textAppearance="@style/CartItemBodyText"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cart_item_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text=""
        android:textAppearance="@style/CartItemPriceLargeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>